<resources>
    <string name="app_name">HaMesakem</string>
    <string name="title_activity_load">LoadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="save">שמור</string>
    <string name="teacher">שם המרצה</string>
    <string name="course">שם הקורס</string>
    <string name="year">שנה</string>
    <string name="simester">סמסטר</string>
    <string name="facebook_application_id" translatable="false">1:835939218133:android:a23cd510878e870511a85c</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1:835939218133:android:a23cd510878e870511a85c</string>
    <string name="logout">Logout</string>
    <string name="choose_course">בחר קורס</string>
    <string name="choose_university">בחר אוניברסיטה</string>
    <string name="choose_lecturer">בחר מרצה</string>
    <string name="search">חפש</string>
    <string name="upload">העלה סיכום</string>
    <string name="loadFile">טען קובץ</string>
    <string name="university">שם האוניברסיטה</string>
    <string name="ID_name">שם המסכם:</string>
    <string name="download">הורד סיכום</string>
    <string name="summeries">הסיכומים שלי</string>
    <string name="cancel">התנתק</string>
    <string name="loadAndSave">טען קובץ ושמור</string>
    <string name="checkSummaries">סיכומים לבדיקה</string>
    <string name="Report_content">דווח על תוכן לא ראוי</string>
    <string name="cancel_report">בטל דיווח על תוכן לא ראוי</string>
    <string name="cancelReport">בטל דיווח</string>
    <string name="num_report">מספר דיווחים</string>
    <string name="button">Button</string>


</resources>