<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/helloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="logout"
        android:text="logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloWorld"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:onClick="onClick"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@+id/helloWorld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded"
                android:text="@string/choose_course"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded"
                android:text="@string/choose_university"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded"
                android:text="@string/choose_lecturer"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded"
        android:text="@string/search"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />


</androidx.constraintlayout.widget.ConstraintLayout>