<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/card_b"
    android:backgroundTint="#000000">

    <androidx.cardview.widget.CardView
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#51000000"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#222121">

            <Button
                android:id="@+id/button_row"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="מחק סיכום"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.913" />

            <Button
                android:id="@+id/button_row3"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="@string/cancelReport"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.913" />

            <Button
                android:id="@+id/button_row2"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="הורד סיכום"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.868"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.913" />

            <TextView
                android:id="@+id/u_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/university"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.975"
                app:layout_constraintStart_toEndOf="@+id/c_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078" />

            <TextView
                android:id="@+id/u_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.746"
                app:layout_constraintStart_toStartOf="@+id/u_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.265" />

            <TextView
                android:id="@+id/c_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.119"
                app:layout_constraintStart_toStartOf="@+id/c_title"
                app:layout_constraintTop_toBottomOf="@+id/c_title"
                app:layout_constraintVertical_bias="0.077" />

            <TextView
                android:id="@+id/c_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.189"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078" />

            <TextView
                android:id="@+id/t_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/t_title"
                app:layout_constraintTop_toBottomOf="@+id/t_title"
                app:layout_constraintVertical_bias="0.046" />

            <TextView
                android:id="@+id/id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="73dp"
                android:layout_marginBottom="4dp"
                android:text="@string/ID_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/t_title"
                app:layout_constraintHorizontal_bias="0.593"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.427" />

            <TextView
                android:id="@+id/t_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:text="@string/teacher"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.845"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.462" />

            <TextView
                android:id="@+id/id_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/t_name"
                app:layout_constraintHorizontal_bias="0.387"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/c_title"
                app:layout_constraintVertical_bias="0.84" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>