<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/card_b"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#51000000"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:backgroundTint="#222121">

            <RatingBar
                android:id="@+id/rating"
                style="@android:style/Widget.Material.RatingBar.Indicator"
                android:layout_width="179dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:isIndicator="false"
                android:mirrorForRtl="false"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/gold"
                android:rotationY="180"
                android:scrollbarStyle="insideOverlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/id_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.882" />

            <Button
                android:id="@+id/button_row"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:text="מחק סיכום"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />

            <TextView
                android:id="@+id/u_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/university"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.975"
                app:layout_constraintStart_toEndOf="@+id/c_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078" />

            <TextView
                android:id="@+id/u_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.369"
                app:layout_constraintStart_toStartOf="@+id/u_title"
                app:layout_constraintTop_toBottomOf="@+id/u_title"
                app:layout_constraintVertical_bias="0.047" />

            <TextView
                android:id="@+id/c_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.189"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078" />

            <TextView
                android:id="@+id/t_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:text="@string/teacher"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.767"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.503" />

            <TextView
                android:id="@+id/t_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.715"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t_title"
                app:layout_constraintVertical_bias="0.101" />

            <TextView
                android:id="@+id/c_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.208"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c_title"
                app:layout_constraintVertical_bias="0.047" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="216dp"
                android:text="(0.0)(0)"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rating"
                app:layout_constraintVertical_bias="0.437" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>